public class AmministratoreGeneraleAMA extends UtenteSistema {

}
