import java.time.LocalDate;

public class Assegnazione {

	private LocalDate dataAssegnazione;

}
