public class Cittadino extends UtenteSistema {

	private String codiceFiscale;
	private String telefono;
	private String indirizzo;
	private String CAP;

}
