public class CodiceInvito {

	private String codice;
	private String ruoloAssociato;
	private boolean valido;
	private boolean utilizzato;

}
