public class ConferimentoSede extends Prenotazione {

}
