import java.time.LocalDate;
import java.time.LocalTime;

public class Disponibilita {

	private LocalDate data;
	private LocalTime oraInizio;
	private LocalTime oraFine;

}
