public abstract class LavoratoreAMA extends UtenteSistema {

	private String idDipendente;
	private String telefono;

}
