public abstract class UtenteSistema {

	private int id;
	private String nome;
	private String cognome;
	private String email;
	private String password;

}
